# DBB_Rate

./: README.md  dbb_rate.json  feedbackdb.feedbacks.json  feedbackdb.subjects.json  feedbackdb.users.json  main.py  pyproject.toml  subjects.json  test.json  users.json
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
frontend/: streamlit_app.py
