[project]
name = "dbb-rate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "pymongo>=4.14.1",
    "setuptools>=80.9.0",
    "stopwordsiso>=0.6.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
    "wordcloud>=1.9.4",
]
